env_config/tests/ui/env_config_attribute_unknown_arg.rs
use env_config::{env_config, EnvConfig};

#[env_config(some_unknown_arg = "WHOOPS")]
#[derive(EnvConfig)]
struct MyLovelyConfig {
    something: bool,
}

fn main() {}
